--- a/public/css/public.css
+++ b/public/css/public.css
@@ -2,7 +2,7 @@
  *              bootstrap-rtl (version 3.3.4)
  *      Author: Morteza Ansarinia (http://github.com/morteza)
  *  Created on: August 13,2015
- *     Notification: bootstrap-rtl
+ *     Project: bootstrap-rtl
  *   Copyright: Unlicensed Public Domain
  *******************************************************************************/
 
